--- a/API_downloads/Merge.ipynb
+++ b/API_downloads/Merge.ipynb
@@ -1,28 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "''' Libraries ''' \n",
-    "import requests\n",
-    "import os\n",
-    "import pandas as pd\n",
-    "from urllib.request import urlopen\n",
-    "import functools as ft\n",
-    "from eodhd import APIClient\n",
-    "import os\n",
-    "from eod import EodHistoricalData\n",
-    "\n",
-    "api_key = '60ee983ba13887.41798715'\n",
-    "client = EodHistoricalData(api_key)"
+    "# Functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +66,6 @@
     "            df_income = pd.concat([df_income, df2], axis=0)\n",
     "        except:\n",
     "            pass\n",
-    "    ''' Merge'''\n",
     "    dfs = [df_cash, df_income, df_balance]\n",
     "    df_final = ft.reduce(lambda left, right: pd.merge(left, right, on='date'), dfs)\n",
     "    \n",
@@ -92,7 +78,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1181,14 +1176,305 @@
        "[34 rows x 25 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = eod('AAPL')\n",
-    "df"
+    "df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def alpha_vantage(ticker, period='annualReports'):\n",
+    "    ''' Libraries ''' \n",
+    "    import requests\n",
+    "    import os\n",
+    "    import pandas as pd\n",
+    "\n",
+    "    from urllib.request import urlopen\n",
+    "    import functools as ft\n",
+    "\n",
+    "    ''' taggin function'''\n",
+    "    def tag(nombre, api):\n",
+    "        name = nombre + '_'+api\n",
+    "        return name\n",
+    "        \n",
+    "\n",
+    "    ''' Request'''\n",
+    "    url = f'https://www.alphavantage.co/query?function=Cash_flow&symbol={ticker}&apikey=6DWJBYP02X4S13GL'\n",
+    "    r = requests.get(url)\n",
+    "    data = r.json()\n",
+    "    df_cash = pd.DataFrame(data[period])\n",
+    "    \n",
+    "\n",
+    "    url = f'https://www.alphavantage.co/query?function=Balance_Sheet&symbol={ticker}&apikey=6DWJBYP02X4S13GL'\n",
+    "    r = requests.get(url)\n",
+    "    data = r.json()\n",
+    "    df_balance = pd.DataFrame(data[period])\n",
+    "\n",
+    "    url = f'https://www.alphavantage.co/query?function=Income_Statement&symbol={ticker}&apikey=6DWJBYP02X4S13GL'\n",
+    "    r = requests.get(url)\n",
+    "    data = r.json()\n",
+    "    df_income = pd.DataFrame(data[period])\n",
+    "\n",
+    "    dfs = [ df_cash, df_balance , df_income]\n",
+    "    df_alpha = ft.reduce(lambda left, right: pd.merge(left, right, on='fiscalDateEnding'),dfs )\n",
+    "    \n",
+    "    tabla = pd.read_excel(r'../Merge.xlsx')\n",
+    "    columnas_Alpha = ['fiscalDateEnding'] + tabla.tag_alpha.tolist()\n",
+    "    \n",
+    "    df_alpha = df_alpha[columnas_Alpha]\n",
+    "    df_alpha = df_alpha.loc[:, ~df_alpha.columns.duplicated()]\n",
+    "\n",
+    "    df_alpha.fiscalDateEnding = pd.to_datetime(df_alpha.fiscalDateEnding)\n",
+    "    dict_alpha = {}\n",
+    "    \n",
+    "    '''\n",
+    "    for i in range(len(df_alpha.columns)):\n",
+    "        dict_alpha[df_alpha.columns[i]] = tag(df_alpha.columns[i],'alpha' )\n",
+    "    df_alpha.rename(columns=dict_alpha, inplace=True)\n",
+    "    ''' \n",
+    "    df_alpha.insert(0,'ticker' , f'{ticker}')\n",
+    "    df_alpha.insert(1, 'date',df_alpha.fiscalDateEnding.dt.strftime('%Y-%m'))\n",
+    "    \n",
+    "    return df_alpha"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ticker</th>\n",
+       "      <th>date</th>\n",
+       "      <th>fiscalDateEnding</th>\n",
+       "      <th>totalAssets</th>\n",
+       "      <th>totalLiabilities</th>\n",
+       "      <th>sellingGeneralAndAdministrative</th>\n",
+       "      <th>researchAndDevelopment</th>\n",
+       "      <th>ebitda</th>\n",
+       "      <th>deferredRevenue</th>\n",
+       "      <th>costOfRevenue</th>\n",
+       "      <th>...</th>\n",
+       "      <th>inventory</th>\n",
+       "      <th>operatingIncome</th>\n",
+       "      <th>comprehensiveIncomeNetOfTax</th>\n",
+       "      <th>currentAccountsPayable</th>\n",
+       "      <th>cashAndShortTermInvestments</th>\n",
+       "      <th>commonStock</th>\n",
+       "      <th>currentNetReceivables</th>\n",
+       "      <th>capitalExpenditures</th>\n",
+       "      <th>totalShareholderEquity</th>\n",
+       "      <th>changeInOperatingAssets</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2022-09</td>\n",
+       "      <td>2022-09-30</td>\n",
+       "      <td>352755000000</td>\n",
+       "      <td>302083000000</td>\n",
+       "      <td>25094000000</td>\n",
+       "      <td>26251000000</td>\n",
+       "      <td>130207000000</td>\n",
+       "      <td>20312000000</td>\n",
+       "      <td>248640000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4946000000</td>\n",
+       "      <td>119437000000</td>\n",
+       "      <td>88531000000</td>\n",
+       "      <td>64115000000</td>\n",
+       "      <td>48304000000</td>\n",
+       "      <td>64849000000</td>\n",
+       "      <td>60932000000</td>\n",
+       "      <td>10708000000</td>\n",
+       "      <td>50672000000</td>\n",
+       "      <td>14358000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2021-09</td>\n",
+       "      <td>2021-09-30</td>\n",
+       "      <td>351002000000</td>\n",
+       "      <td>287912000000</td>\n",
+       "      <td>21973000000</td>\n",
+       "      <td>21914000000</td>\n",
+       "      <td>123136000000</td>\n",
+       "      <td>19512000000</td>\n",
+       "      <td>234954000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6580000000</td>\n",
+       "      <td>108949000000</td>\n",
+       "      <td>95249000000</td>\n",
+       "      <td>54763000000</td>\n",
+       "      <td>62639000000</td>\n",
+       "      <td>57365000000</td>\n",
+       "      <td>51506000000</td>\n",
+       "      <td>11085000000</td>\n",
+       "      <td>63090000000</td>\n",
+       "      <td>24712000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2020-09</td>\n",
+       "      <td>2020-09-30</td>\n",
+       "      <td>323888000000</td>\n",
+       "      <td>258549000000</td>\n",
+       "      <td>19916000000</td>\n",
+       "      <td>18752000000</td>\n",
+       "      <td>81020000000</td>\n",
+       "      <td>16843000000</td>\n",
+       "      <td>189475000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4061000000</td>\n",
+       "      <td>66288000000</td>\n",
+       "      <td>57453000000</td>\n",
+       "      <td>42296000000</td>\n",
+       "      <td>90943000000</td>\n",
+       "      <td>50779000000</td>\n",
+       "      <td>37445000000</td>\n",
+       "      <td>7309000000</td>\n",
+       "      <td>65339000000</td>\n",
+       "      <td>1245000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2019-09</td>\n",
+       "      <td>2019-09-30</td>\n",
+       "      <td>338516000000</td>\n",
+       "      <td>248028000000</td>\n",
+       "      <td>18245000000</td>\n",
+       "      <td>16217000000</td>\n",
+       "      <td>81860000000</td>\n",
+       "      <td>13622000000</td>\n",
+       "      <td>180027000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4106000000</td>\n",
+       "      <td>63930000000</td>\n",
+       "      <td>58037000000</td>\n",
+       "      <td>46236000000</td>\n",
+       "      <td>100557000000</td>\n",
+       "      <td>45174000000</td>\n",
+       "      <td>45804000000</td>\n",
+       "      <td>10495000000</td>\n",
+       "      <td>90488000000</td>\n",
+       "      <td>-3760000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2018-09</td>\n",
+       "      <td>2018-09-30</td>\n",
+       "      <td>365725000000</td>\n",
+       "      <td>258578000000</td>\n",
+       "      <td>16705000000</td>\n",
+       "      <td>14236000000</td>\n",
+       "      <td>87046000000</td>\n",
+       "      <td>14766000000</td>\n",
+       "      <td>163756000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3956000000</td>\n",
+       "      <td>70898000000</td>\n",
+       "      <td>56505000000</td>\n",
+       "      <td>55888000000</td>\n",
+       "      <td>25913000000</td>\n",
+       "      <td>40201000000</td>\n",
+       "      <td>48995000000</td>\n",
+       "      <td>13313000000</td>\n",
+       "      <td>107147000000</td>\n",
+       "      <td>12927000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 27 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  ticker     date fiscalDateEnding   totalAssets totalLiabilities  \\\n",
+       "0   AAPL  2022-09       2022-09-30  352755000000     302083000000   \n",
+       "1   AAPL  2021-09       2021-09-30  351002000000     287912000000   \n",
+       "2   AAPL  2020-09       2020-09-30  323888000000     258549000000   \n",
+       "3   AAPL  2019-09       2019-09-30  338516000000     248028000000   \n",
+       "4   AAPL  2018-09       2018-09-30  365725000000     258578000000   \n",
+       "\n",
+       "  sellingGeneralAndAdministrative researchAndDevelopment        ebitda  \\\n",
+       "0                     25094000000            26251000000  130207000000   \n",
+       "1                     21973000000            21914000000  123136000000   \n",
+       "2                     19916000000            18752000000   81020000000   \n",
+       "3                     18245000000            16217000000   81860000000   \n",
+       "4                     16705000000            14236000000   87046000000   \n",
+       "\n",
+       "  deferredRevenue costOfRevenue  ...   inventory operatingIncome  \\\n",
+       "0     20312000000  248640000000  ...  4946000000    119437000000   \n",
+       "1     19512000000  234954000000  ...  6580000000    108949000000   \n",
+       "2     16843000000  189475000000  ...  4061000000     66288000000   \n",
+       "3     13622000000  180027000000  ...  4106000000     63930000000   \n",
+       "4     14766000000  163756000000  ...  3956000000     70898000000   \n",
+       "\n",
+       "  comprehensiveIncomeNetOfTax currentAccountsPayable  \\\n",
+       "0                 88531000000            64115000000   \n",
+       "1                 95249000000            54763000000   \n",
+       "2                 57453000000            42296000000   \n",
+       "3                 58037000000            46236000000   \n",
+       "4                 56505000000            55888000000   \n",
+       "\n",
+       "  cashAndShortTermInvestments  commonStock currentNetReceivables  \\\n",
+       "0                 48304000000  64849000000           60932000000   \n",
+       "1                 62639000000  57365000000           51506000000   \n",
+       "2                 90943000000  50779000000           37445000000   \n",
+       "3                100557000000  45174000000           45804000000   \n",
+       "4                 25913000000  40201000000           48995000000   \n",
+       "\n",
+       "  capitalExpenditures totalShareholderEquity changeInOperatingAssets  \n",
+       "0         10708000000            50672000000             14358000000  \n",
+       "1         11085000000            63090000000             24712000000  \n",
+       "2          7309000000            65339000000              1245000000  \n",
+       "3         10495000000            90488000000             -3760000000  \n",
+       "4         13313000000           107147000000             12927000000  \n",
+       "\n",
+       "[5 rows x 27 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alpha_vantage('AAPL')"
    ]
   }
  ],
