--- a/API_downloads/Alpha_Vantage.ipynb
+++ b/API_downloads/Alpha_Vantage.ipynb
@@ -10,8 +10,9 @@
     "import requests\n",
     "import os\n",
     "import pandas as pd\n",
-    "from fuzzywuzzy import process, fuzz\n",
-    "from urllib.request import urlopen"
+    "\n",
+    "from urllib.request import urlopen\n",
+    "import functools as ft\n"
    ]
   },
   {
@@ -165,18 +166,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def alpha_vantage(ticker, period='annualReports'):\n",
+    "    ''' Libraries ''' \n",
+    "    import requests\n",
+    "    import os\n",
+    "    import pandas as pd\n",
+    "\n",
+    "    from urllib.request import urlopen\n",
+    "    import functools as ft\n",
+    "\n",
+    "    ''' taggin function'''\n",
     "    def tag(nombre, api):\n",
     "        name = nombre + '_'+api\n",
     "        return name\n",
     "        \n",
-    "    tabla = pd.read_excel(r'../Merge.xlsx')\n",
-    "    columnas_Alpha = ['fiscalDateEnding'] + tabla.tag_alpha.tolist()\n",
     "\n",
+    "    ''' Request'''\n",
     "    url = f'https://www.alphavantage.co/query?function=Cash_flow&symbol={ticker}&apikey=6DWJBYP02X4S13GL'\n",
     "    r = requests.get(url)\n",
     "    data = r.json()\n",
@@ -192,12 +201,16 @@
     "    r = requests.get(url)\n",
     "    data = r.json()\n",
     "    df_income = pd.DataFrame(data[period])\n",
+    "\n",
+    "    dfs = [ df_cash, df_balance , df_income]\n",
+    "    df_alpha = ft.reduce(lambda left, right: pd.merge(left, right, on='fiscalDateEnding'),dfs )\n",
     "    \n",
-    "    df_alpha = pd.concat([ df_cash, df_balance , df_income], axis=1)\n",
+    "    tabla = pd.read_excel(r'../Merge.xlsx')\n",
+    "    columnas_Alpha = ['fiscalDateEnding'] + tabla.tag_alpha.tolist()\n",
+    "    \n",
     "    df_alpha = df_alpha[columnas_Alpha]\n",
     "    df_alpha = df_alpha.loc[:, ~df_alpha.columns.duplicated()]\n",
     "\n",
-    "    df_alpha.fiscalDateEnding = pd.to_datetime(df_alpha.fiscalDateEnding)\n",
     "    dict_alpha = {}\n",
     "    \n",
     "    '''\n",
@@ -206,6 +219,7 @@
     "    df_alpha.rename(columns=dict_alpha, inplace=True)\n",
     "    ''' \n",
     "    df_alpha.insert(0,'ticker' , f'{ticker}')\n",
+    "    df_alpha.fiscalDateEnding = pd.to_datetime(df_alpha.fiscalDateEnding)\n",
     "    df_alpha.insert(1, 'date',df_alpha.fiscalDateEnding.dt.strftime('%Y-%m'))\n",
     "    \n",
     "    return df_alpha\n"
@@ -213,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +446,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
