--- a/API_downloads/EOD.ipynb
+++ b/API_downloads/EOD.ipynb
@@ -86,6 +86,7 @@
     "    df_final['date']= pd.to_datetime(df_final.date)\n",
     "    df_final['date']= df_final.date.dt.strftime('%Y-%m')\n",
     "    df_final = df_final[columns]\n",
+    "    df_final.insert(1, 'ticker', ticker)\n",
     "\n",
     "    return df_final"
    ]
