--- a/API_downloads/Sharadar.ipynb
+++ b/API_downloads/Sharadar.ipynb
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -249,8 +249,8 @@
        "      <th>ebitda</th>\n",
        "      <th>deferredrev</th>\n",
        "      <th>...</th>\n",
+       "      <th>cashneq</th>\n",
        "      <th>inventory</th>\n",
-       "      <th>opinc</th>\n",
        "      <th>accoci</th>\n",
        "      <th>payables</th>\n",
        "      <th>cashneq</th>\n",
@@ -299,8 +299,8 @@
        "      <td>1.331380e+11</td>\n",
        "      <td>7.912000e+09</td>\n",
        "      <td>...</td>\n",
+       "      <td>2.364600e+10</td>\n",
        "      <td>4.946000e+09</td>\n",
-       "      <td>1.194370e+11</td>\n",
        "      <td>-1.110900e+10</td>\n",
        "      <td>6.411500e+10</td>\n",
        "      <td>2.364600e+10</td>\n",
@@ -323,8 +323,8 @@
        "      <td>1.231360e+11</td>\n",
        "      <td>7.612000e+09</td>\n",
        "      <td>...</td>\n",
+       "      <td>3.494000e+10</td>\n",
        "      <td>6.580000e+09</td>\n",
-       "      <td>1.089490e+11</td>\n",
        "      <td>1.630000e+08</td>\n",
        "      <td>5.476300e+10</td>\n",
        "      <td>3.494000e+10</td>\n",
@@ -347,8 +347,8 @@
        "      <td>8.102000e+10</td>\n",
        "      <td>6.643000e+09</td>\n",
        "      <td>...</td>\n",
+       "      <td>3.801600e+10</td>\n",
        "      <td>4.061000e+09</td>\n",
-       "      <td>6.628800e+10</td>\n",
        "      <td>-4.060000e+08</td>\n",
        "      <td>4.229600e+10</td>\n",
        "      <td>3.801600e+10</td>\n",
@@ -371,8 +371,8 @@
        "      <td>8.186000e+10</td>\n",
        "      <td>5.522000e+09</td>\n",
        "      <td>...</td>\n",
+       "      <td>4.884400e+10</td>\n",
        "      <td>4.106000e+09</td>\n",
-       "      <td>6.393000e+10</td>\n",
        "      <td>-5.840000e+08</td>\n",
        "      <td>4.623600e+10</td>\n",
        "      <td>4.884400e+10</td>\n",
@@ -395,8 +395,8 @@
        "      <td>8.704600e+10</td>\n",
        "      <td>5.966000e+09</td>\n",
        "      <td>...</td>\n",
+       "      <td>2.591300e+10</td>\n",
        "      <td>3.956000e+09</td>\n",
-       "      <td>7.089800e+10</td>\n",
        "      <td>-3.454000e+09</td>\n",
        "      <td>5.588800e+10</td>\n",
        "      <td>2.591300e+10</td>\n",
@@ -443,8 +443,8 @@
        "      <td>1.370000e+08</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>...</td>\n",
+       "      <td>1.481000e+09</td>\n",
        "      <td>7.800000e+07</td>\n",
-       "      <td>1.090000e+08</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>7.190000e+08</td>\n",
        "      <td>1.481000e+09</td>\n",
@@ -467,8 +467,8 @@
        "      <td>1.410000e+08</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>...</td>\n",
+       "      <td>1.203000e+09</td>\n",
        "      <td>1.290000e+08</td>\n",
-       "      <td>6.100000e+07</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>5.730000e+08</td>\n",
        "      <td>1.203000e+09</td>\n",
@@ -491,8 +491,8 @@
        "      <td>8.700000e+07</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>...</td>\n",
+       "      <td>1.285000e+09</td>\n",
        "      <td>2.570000e+08</td>\n",
-       "      <td>5.100000e+07</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>5.230000e+08</td>\n",
        "      <td>1.285000e+09</td>\n",
@@ -515,8 +515,8 @@
        "      <td>7.500000e+07</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>...</td>\n",
+       "      <td>1.193000e+09</td>\n",
        "      <td>4.040000e+08</td>\n",
-       "      <td>4.000000e+07</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>6.550000e+08</td>\n",
        "      <td>1.193000e+09</td>\n",
@@ -539,8 +539,8 @@
        "      <td>NaN</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>...</td>\n",
+       "      <td>1.230000e+09</td>\n",
        "      <td>4.370000e+08</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>6.850000e+08</td>\n",
        "      <td>1.230000e+09</td>\n",
@@ -552,7 +552,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>465 rows × 28 columns</p>\n",
+       "<p>465 rows × 27 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -584,19 +584,19 @@
        "463   2.340000e+08  7.900000e+07  7.500000e+07  0.000000e+00  ...   \n",
        "464            NaN           NaN           NaN  0.000000e+00  ...   \n",
        "\n",
-       "         inventory         opinc        accoci      payables       cashneq  \\\n",
+       "           cashneq     inventory        accoci      payables       cashneq  \\\n",
        "None                                                                         \n",
-       "0     4.946000e+09  1.194370e+11 -1.110900e+10  6.411500e+10  2.364600e+10   \n",
-       "1     6.580000e+09  1.089490e+11  1.630000e+08  5.476300e+10  3.494000e+10   \n",
-       "2     4.061000e+09  6.628800e+10 -4.060000e+08  4.229600e+10  3.801600e+10   \n",
-       "3     4.106000e+09  6.393000e+10 -5.840000e+08  4.623600e+10  4.884400e+10   \n",
-       "4     3.956000e+09  7.089800e+10 -3.454000e+09  5.588800e+10  2.591300e+10   \n",
+       "0     2.364600e+10  4.946000e+09 -1.110900e+10  6.411500e+10  2.364600e+10   \n",
+       "1     3.494000e+10  6.580000e+09  1.630000e+08  5.476300e+10  3.494000e+10   \n",
+       "2     3.801600e+10  4.061000e+09 -4.060000e+08  4.229600e+10  3.801600e+10   \n",
+       "3     4.884400e+10  4.106000e+09 -5.840000e+08  4.623600e+10  4.884400e+10   \n",
+       "4     2.591300e+10  3.956000e+09 -3.454000e+09  5.588800e+10  2.591300e+10   \n",
        "...            ...           ...           ...           ...           ...   \n",
-       "460   7.800000e+07  1.090000e+08  0.000000e+00  7.190000e+08  1.481000e+09   \n",
-       "461   1.290000e+08  6.100000e+07  0.000000e+00  5.730000e+08  1.203000e+09   \n",
-       "462   2.570000e+08  5.100000e+07  0.000000e+00  5.230000e+08  1.285000e+09   \n",
-       "463   4.040000e+08  4.000000e+07  0.000000e+00  6.550000e+08  1.193000e+09   \n",
-       "464   4.370000e+08           NaN  0.000000e+00  6.850000e+08  1.230000e+09   \n",
+       "460   1.481000e+09  7.800000e+07  0.000000e+00  7.190000e+08  1.481000e+09   \n",
+       "461   1.203000e+09  1.290000e+08  0.000000e+00  5.730000e+08  1.203000e+09   \n",
+       "462   1.285000e+09  2.570000e+08  0.000000e+00  5.230000e+08  1.285000e+09   \n",
+       "463   1.193000e+09  4.040000e+08  0.000000e+00  6.550000e+08  1.193000e+09   \n",
+       "464   1.230000e+09  4.370000e+08  0.000000e+00  6.850000e+08  1.230000e+09   \n",
        "\n",
        "        dps   receivables         capex        equity         opinc  \n",
        "None                                                                 \n",
@@ -612,10 +612,10 @@
        "463   0.000  9.020000e+08  3.800000e+07  1.244000e+09  4.000000e+07  \n",
        "464   0.000  1.035000e+09           NaN  1.200000e+09           NaN  \n",
        "\n",
-       "[465 rows x 28 columns]"
+       "[465 rows x 27 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
