--- a/API_downloads/Merge.ipynb
+++ b/API_downloads/Merge.ipynb
@@ -4688,25 +4688,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'list' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\KNL\\Desktop\\Ale\\Upwork\\Financial-APIs-Comparison-Python.git~\\Financial-APIs-Comparison-Python\\API_downloads\\Merge.ipynb Celda 15\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/KNL/Desktop/Ale/Upwork/Financial-APIs-Comparison-Python.git~/Financial-APIs-Comparison-Python/API_downloads/Merge.ipynb#X20sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m dictionary \u001b[39m=\u001b[39m {}\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/KNL/Desktop/Ale/Upwork/Financial-APIs-Comparison-Python.git~/Financial-APIs-Comparison-Python/API_downloads/Merge.ipynb#X20sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m tiingo \u001b[39m=\u001b[39m []\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/KNL/Desktop/Ale/Upwork/Financial-APIs-Comparison-Python.git~/Financial-APIs-Comparison-Python/API_downloads/Merge.ipynb#X20sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m cols_tiingo \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39;49m(tabla\u001b[39m.\u001b[39;49mtag_tiingo)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/KNL/Desktop/Ale/Upwork/Financial-APIs-Comparison-Python.git~/Financial-APIs-Comparison-Python/API_downloads/Merge.ipynb#X20sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m dict_tiingo \u001b[39m=\u001b[39m {}\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/KNL/Desktop/Ale/Upwork/Financial-APIs-Comparison-Python.git~/Financial-APIs-Comparison-Python/API_downloads/Merge.ipynb#X20sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(cols_tiingo)):\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'list' object is not callable"
-     ]
+     "data": {
+      "text/plain": [
+       "dict_keys(['tiingo', 'alpha_vantage', 'eod', 'finnhub', 'sharadar', 'financial_model'])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
     "tabla = pd.read_excel('../Merge.xlsx')\n",
     "tabla2 = pd.DataFrame()\n",
+    "\n",
+    "def tag(nombre, api):\n",
+    "    name = nombre + '_'+api\n",
+    "    return name\n",
     "\n",
     "dictionary = {}\n",
     "tiingo = []\n",
@@ -4758,7 +4769,19 @@
     "dictionary['financial_model'] = dict_financial\n",
     "\n",
     "\n",
-    "dictionary"
+    "dictionary.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open('dictionary.txt', 'w') as convert_file:\n",
+    "    convert_file.write(json.dumps(dictionary))"
    ]
   },
   {
