--- a/Download_and_process.ipynb
+++ b/Download_and_process.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,14 +538,23 @@
     "\n",
     "    ''' Reading each file'''\n",
     "    eod_csv = pd.read_csv('Data\\\\eod.csv')\n",
+    "    \n",
     "    alpha_csv = pd.read_csv('Data\\\\alpha.csv')\n",
     "    financial_model_csv = pd.read_csv('Data\\\\financial_model.csv')\n",
     "    finnhub_csv = pd.read_csv('Data\\\\finnhub.csv')\n",
     "    sharadar_csv = pd.read_csv('Data\\\\sharadar.csv')\n",
     "    tiingo_csv = pd.read_csv('Data\\\\tiingo.csv')\n",
     "\n",
-    "    ''' Merging all together on DATE and TICKER'''\n",
     "    dfs = [eod_csv, alpha_csv, financial_model_csv, finnhub_csv, sharadar_csv, tiingo_csv]\n",
+    "    dfs_name = ['eod_csv', 'alpha_csv', 'financial_model_csv', 'finnhub_csv', 'sharadar_csv', 'tiingo_csv']\n",
+    "    ''' table with dataframes shapes'''\n",
+    "    shapes = pd.DataFrame(columns=['API', 'Rows'])\n",
+    "    for i in range(len(dfs)):\n",
+    "        shapes.loc[len(shapes.index)] = [dfs_name[i], dfs[i].shape[0]]\n",
+    "    display(shapes)\n",
+    "    \n",
+    "\n",
+    "    ''' Merging all together on DATE and TICKER'''\n",
     "    df_merge = ft.reduce(lambda left, right: pd.merge(left, right, on=['date', 'ticker']), dfs) \n",
     "    \n",
     "   \n",
@@ -559,16 +568,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\KNL\\AppData\\Local\\Temp\\ipykernel_19568\\3375051500.py:25: DeprecationWarning: cafile, capath and cadefault are deprecated, use a custom context instead.\n",
+      "C:\\Users\\KNL\\AppData\\Local\\Temp\\ipykernel_384\\3375051500.py:25: DeprecationWarning: cafile, capath and cadefault are deprecated, use a custom context instead.\n",
       "  response = urlopen(url, cafile=certifi.where())\n",
-      "C:\\Users\\KNL\\AppData\\Local\\Temp\\ipykernel_19568\\2177336945.py:53: FutureWarning: Passing 'suffixes' which cause duplicate columns {'Unnamed: 0_x'} in the result is deprecated and will raise a MergeError in a future version.\n",
+      "C:\\Users\\KNL\\AppData\\Local\\Temp\\ipykernel_384\\3375051500.py:25: DeprecationWarning: cafile, capath and cadefault are deprecated, use a custom context instead.\n",
+      "  response = urlopen(url, cafile=certifi.where())\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>API</th>\n",
+       "      <th>Rows</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>eod_csv</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>alpha_csv</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>financial_model_csv</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>finnhub_csv</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>sharadar_csv</td>\n",
+       "      <td>196</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>tiingo_csv</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   API Rows\n",
+       "0              eod_csv   34\n",
+       "1            alpha_csv   20\n",
+       "2  financial_model_csv   34\n",
+       "3          finnhub_csv   38\n",
+       "4         sharadar_csv  196\n",
+       "5           tiingo_csv   12"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\KNL\\AppData\\Local\\Temp\\ipykernel_384\\4263719236.py:62: FutureWarning: Passing 'suffixes' which cause duplicate columns {'Unnamed: 0_x'} in the result is deprecated and will raise a MergeError in a future version.\n",
       "  df_merge = ft.reduce(lambda left, right: pd.merge(left, right, on=['date', 'ticker']), dfs)\n"
      ]
     },
@@ -619,75 +709,75 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2021-12</td>\n",
-       "      <td>IBM</td>\n",
-       "      <td>1.320010e+11</td>\n",
-       "      <td>132001000000</td>\n",
-       "      <td>1.320010e+11</td>\n",
-       "      <td>132001</td>\n",
-       "      <td>1.320010e+11</td>\n",
-       "      <td>132001000000</td>\n",
-       "      <td>1.130050e+11</td>\n",
-       "      <td>113005000000</td>\n",
+       "      <td>2022-09</td>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>3.527550e+11</td>\n",
+       "      <td>352755000000</td>\n",
+       "      <td>3.527550e+11</td>\n",
+       "      <td>352755</td>\n",
+       "      <td>3.527550e+11</td>\n",
+       "      <td>352755000000</td>\n",
+       "      <td>3.020830e+11</td>\n",
+       "      <td>302083000000</td>\n",
        "      <td>...</td>\n",
-       "      <td>2768000000</td>\n",
-       "      <td>-2768</td>\n",
-       "      <td>-2.381000e+09</td>\n",
-       "      <td>-2768000000</td>\n",
-       "      <td>1.890100e+10</td>\n",
-       "      <td>18901000000</td>\n",
-       "      <td>1.890100e+10</td>\n",
-       "      <td>132001</td>\n",
-       "      <td>1.890100e+10</td>\n",
-       "      <td>18901000000</td>\n",
+       "      <td>10708000000</td>\n",
+       "      <td>-10708</td>\n",
+       "      <td>-1.070800e+10</td>\n",
+       "      <td>-10708000000</td>\n",
+       "      <td>5.067200e+10</td>\n",
+       "      <td>50672000000</td>\n",
+       "      <td>5.067200e+10</td>\n",
+       "      <td>352755</td>\n",
+       "      <td>5.067200e+10</td>\n",
+       "      <td>50672000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2020-12</td>\n",
-       "      <td>IBM</td>\n",
-       "      <td>1.559710e+11</td>\n",
-       "      <td>155971000000</td>\n",
-       "      <td>1.559700e+11</td>\n",
-       "      <td>155971</td>\n",
-       "      <td>1.559710e+11</td>\n",
-       "      <td>155970000000</td>\n",
-       "      <td>1.352440e+11</td>\n",
-       "      <td>135244000000</td>\n",
+       "      <td>2021-09</td>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>3.510020e+11</td>\n",
+       "      <td>351002000000</td>\n",
+       "      <td>3.510020e+11</td>\n",
+       "      <td>351002</td>\n",
+       "      <td>3.510020e+11</td>\n",
+       "      <td>351002000000</td>\n",
+       "      <td>2.879120e+11</td>\n",
+       "      <td>287912000000</td>\n",
        "      <td>...</td>\n",
-       "      <td>3230000000</td>\n",
-       "      <td>-3230</td>\n",
-       "      <td>-3.042000e+09</td>\n",
-       "      <td>-3230000000</td>\n",
-       "      <td>2.059700e+10</td>\n",
-       "      <td>20597000000</td>\n",
-       "      <td>2.059700e+10</td>\n",
-       "      <td>155971</td>\n",
-       "      <td>2.059700e+10</td>\n",
-       "      <td>20597000000</td>\n",
+       "      <td>11085000000</td>\n",
+       "      <td>-11085</td>\n",
+       "      <td>-1.108500e+10</td>\n",
+       "      <td>-11085000000</td>\n",
+       "      <td>6.309000e+10</td>\n",
+       "      <td>63090000000</td>\n",
+       "      <td>6.309000e+10</td>\n",
+       "      <td>351002</td>\n",
+       "      <td>6.309000e+10</td>\n",
+       "      <td>63090000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2019-12</td>\n",
-       "      <td>IBM</td>\n",
-       "      <td>1.521860e+11</td>\n",
-       "      <td>152186000000</td>\n",
-       "      <td>1.521860e+11</td>\n",
-       "      <td>152186</td>\n",
-       "      <td>1.521860e+11</td>\n",
-       "      <td>152186000000</td>\n",
-       "      <td>1.312020e+11</td>\n",
-       "      <td>131202000000</td>\n",
+       "      <td>2020-09</td>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>3.238880e+11</td>\n",
+       "      <td>323888000000</td>\n",
+       "      <td>3.238880e+11</td>\n",
+       "      <td>323888</td>\n",
+       "      <td>3.238880e+11</td>\n",
+       "      <td>323888000000</td>\n",
+       "      <td>2.585490e+11</td>\n",
+       "      <td>258549000000</td>\n",
        "      <td>...</td>\n",
-       "      <td>2907000000</td>\n",
-       "      <td>-2907</td>\n",
-       "      <td>-2.370000e+09</td>\n",
-       "      <td>-2907000000</td>\n",
-       "      <td>2.084100e+10</td>\n",
-       "      <td>20841000000</td>\n",
-       "      <td>2.084100e+10</td>\n",
-       "      <td>152186</td>\n",
-       "      <td>2.084100e+10</td>\n",
-       "      <td>20841000000</td>\n",
+       "      <td>7309000000</td>\n",
+       "      <td>-7309</td>\n",
+       "      <td>-7.309000e+09</td>\n",
+       "      <td>-7309000000</td>\n",
+       "      <td>6.533900e+10</td>\n",
+       "      <td>65339000000</td>\n",
+       "      <td>6.533900e+10</td>\n",
+       "      <td>323888</td>\n",
+       "      <td>6.533900e+10</td>\n",
+       "      <td>65339000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -696,50 +786,50 @@
       ],
       "text/plain": [
        "      date ticker  totalAssets_tiingo  totalAssets_alpha  totalAssets_eod  \\\n",
-       "0  2021-12    IBM        1.320010e+11       132001000000     1.320010e+11   \n",
-       "1  2020-12    IBM        1.559710e+11       155971000000     1.559700e+11   \n",
-       "2  2019-12    IBM        1.521860e+11       152186000000     1.521860e+11   \n",
+       "0  2022-09   AAPL        3.527550e+11       352755000000     3.527550e+11   \n",
+       "1  2021-09   AAPL        3.510020e+11       351002000000     3.510020e+11   \n",
+       "2  2020-09   AAPL        3.238880e+11       323888000000     3.238880e+11   \n",
        "\n",
        "   totalAssets_finnhub  assets_sharadar  totalAssets_financial  \\\n",
-       "0               132001     1.320010e+11           132001000000   \n",
-       "1               155971     1.559710e+11           155970000000   \n",
-       "2               152186     1.521860e+11           152186000000   \n",
+       "0               352755     3.527550e+11           352755000000   \n",
+       "1               351002     3.510020e+11           351002000000   \n",
+       "2               323888     3.238880e+11           323888000000   \n",
        "\n",
        "   totalLiabilities_tiingo  totalLiabilities_alpha  ...  \\\n",
-       "0             1.130050e+11            113005000000  ...   \n",
-       "1             1.352440e+11            135244000000  ...   \n",
-       "2             1.312020e+11            131202000000  ...   \n",
+       "0             3.020830e+11            302083000000  ...   \n",
+       "1             2.879120e+11            287912000000  ...   \n",
+       "2             2.585490e+11            258549000000  ...   \n",
        "\n",
        "   capitalExpenditures_eod  capex_finnhub  capex_sharadar  \\\n",
-       "0               2768000000          -2768   -2.381000e+09   \n",
-       "1               3230000000          -3230   -3.042000e+09   \n",
-       "2               2907000000          -2907   -2.370000e+09   \n",
+       "0              10708000000         -10708   -1.070800e+10   \n",
+       "1              11085000000         -11085   -1.108500e+10   \n",
+       "2               7309000000          -7309   -7.309000e+09   \n",
        "\n",
        "   capitalExpenditure_financial  equity_tiingo  totalShareholderEquity_alpha  \\\n",
-       "0                   -2768000000   1.890100e+10                   18901000000   \n",
-       "1                   -3230000000   2.059700e+10                   20597000000   \n",
-       "2                   -2907000000   2.084100e+10                   20841000000   \n",
+       "0                  -10708000000   5.067200e+10                   50672000000   \n",
+       "1                  -11085000000   6.309000e+10                   63090000000   \n",
+       "2                   -7309000000   6.533900e+10                   65339000000   \n",
        "\n",
        "   totalStockholderEquity_eod  liabilitiesShareholdersEquity_finnhub  \\\n",
-       "0                1.890100e+10                                 132001   \n",
-       "1                2.059700e+10                                 155971   \n",
-       "2                2.084100e+10                                 152186   \n",
+       "0                5.067200e+10                                 352755   \n",
+       "1                6.309000e+10                                 351002   \n",
+       "2                6.533900e+10                                 323888   \n",
        "\n",
        "   equity_sharadar  totalStockholdersEquity_financial  \n",
-       "0     1.890100e+10                        18901000000  \n",
-       "1     2.059700e+10                        20597000000  \n",
-       "2     2.084100e+10                        20841000000  \n",
+       "0     5.067200e+10                        50672000000  \n",
+       "1     6.309000e+10                        63090000000  \n",
+       "2     6.533900e+10                        65339000000  \n",
        "\n",
        "[3 rows x 134 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "complete_process('IBM')\n"
+    "complete_process('AAPL')\n"
    ]
   },
   {
